--- a/ICFES_PROJECT/nbproject/private/private.properties
+++ b/ICFES_PROJECT/nbproject/private/private.properties
@@ -1,1 +1,1 @@
-user.properties.file=C:\\Users\\javie\\AppData\\Roaming\\NetBeans\\12.1\\build.properties
+user.properties.file=C:\\Users\\maleja\\AppData\\Roaming\\NetBeans\\8.2rc\\build.properties
